<resources>
    <string name="app_name">Venmo</string>
    <string name="title_search_home">Search</string>
    <string name="title_network">Network</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_earnings">Earnings</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="side_nav_invite_friends">Invite Friends</string>
    <string name="side_nav_invite_recommend_services">Recommend Services</string>
    <string name="side_nav_manage_services">List / Manage Services</string>
    <string name="side_nav_become_expert">Become an Expert</string>
    <string name="side_nav_payment_setting">Payment Settings</string>
    <string name="side_nav_settings">Settings</string>
    <string name="side_nav_promos">Promos</string>
    <string name="side_nav_support">Support</string>
    <string name="side_nav_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
